# iNotifier

./: README.md
agent/: Cargo.toml
agent/src/: main.rs
plugin/: iNotify.pl
