[package]
name = "agent"
version = "0.1.0"
authors = ["Nicolas Trippar <ntrippar@gmail.com>"]

[dependencies]
iron = "0.5.1"
router = "0.5.1"
bodyparser = "0.7.0"
serde = "1.0.15"
serde_derive = "1.0.15"

[dependencies.mac-notification-sys]
git = "https://github.com/ntrippar/mac-notification-sys.git"
